syntax = "proto3";
package republique;

import "google/protobuf/timestamp.proto";
//import "google/protobuf/empty.proto";

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// RPCs
service GameService {
  rpc Echo(StringMessage) returns (StringMessage) {}
  rpc Version(EmptyMessage) returns (StringMessage) {}
  rpc Login(LoginMessage) returns (LoginResponse) {}
  rpc GameTime(StringMessage) returns (GameTimeResponse) {}
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Messages
message StringMessage {
  string value = 1;
}

message EmptyMessage {
  // empty
}

message GameTimeResponse {
  Phase phase = 1;
  google.protobuf.Timestamp gameTime = 2;
  int64 stopWatch = 3;
}

message LoginMessage {
  string teamCode = 2;
  string playerCode = 3;
}

message LoginResponse {
  string welcome = 2;
  repeated string commanders = 3; // being an index into the Team.Commands by Command.Name
  string teamName = 4;
  string briefing = 5;
  string gameName = 6;
  Token token = 7;
  google.protobuf.Timestamp gameTime = 8;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Types
message Grid {
  int32 x = 1;
  int32 y = 2;
  bool cover = 3;
  bool woods = 4;
  bool bua = 5;
  bool fort = 6;
}

// Unit details that are static for a game
message Unit {
  string name = 1;
  Arm arm = 2;
  UnitType unitType = 3;
  int32 strength = 4;
  UnitGrade grade = 5;
  SkirmishRating skirmishRating = 6;
  int32 skirmisherMax = 7;
  string notes = 8;
  bool bnGuns = 9;
  Nationality nationality = 10;
  Drill drill = 11;
  bool commandReserve = 12;
  UnitGameState gameState = 13;
  repeated UnitGameState history = 14;
  int32 id = 15;
}

// Unit details that can change from turn to turn
message UnitGameState {
  int32 hits = 1;
  int32 skirmishersDeployed = 2;
  Formation formation = 3;
  MoraleState moraleState = 4;
  bool gunsDamaged = 5;
  bool gunsDeployed = 6;
  bool gunsStocked = 7;
  bool hidden = 8;
  bool hasFired = 9;
  int32 fatigue = 10;
  bool lowAmmo = 11;
  int32 cover = 12;
  Grid grid = 13;
  string playerInstructions = 14;
  bool actionRequired = 15;
  Grid objective = 16;
  Grid moveTo = 17;
  Grid gunTarget = 18;
  bool hasCharged = 19;
  string supportingUnit = 20;
  string engagedUnit = 21;
  bool canAssault = 22;
  bool hasAssaulted = 23;
}

// Command details that are static for a game
message Command {
  string name = 1;
  string commanderName = 2;
  CommandRating commandRating = 3;
  Rank rank = 4;
  repeated Command subcommands = 5;
  repeated Unit units = 6;
  int32 commanderBonus = 7;
  Arm arm = 8;
  Nationality nationality = 9;
  UnitGrade grade = 10;
  Drill drill = 11;
  string notes = 12;
  Arrival arrival = 13;
  CommandGameState gameState = 14;
  repeated CommandGameState history = 15;
  bool reserve = 16;
  int32 id = 17;
}

// Command details that can change from turn to turn
message CommandGameState {
  int32 turn = 1;
  Grid grid = 2;
  BattlefieldPosition position = 3;
  string formation = 4;
  int32 panicState = 5;
  bool injured = 6;
  string objectiveName = 7;
  Order orders = 8;
  string attachedTo = 9;
  bool hasOrdered = 10;
  bool hasMoved = 11;
  bool hasRallied = 12;
  google.protobuf.Timestamp timestamp = 13;
  Grid objective = 14;
}

message Arrival {
  int32 from = 1;
  int32 to = 2;
  int32 percent = 3;
  int32 computedTurn = 4;
  google.protobuf.Timestamp actualArrival = 5;
  BattlefieldPosition position = 6;
  bool contact = 7;
}

message Team {
  string name = 1;
  string briefing = 2;
  repeated Command commands = 3;
  string accessCode = 4;
  repeated Player players = 5;
  string gameName = 6;
}

// TODO - add some public key enc / tokens to this
message Player {
  string accessCode = 1;
  repeated string commanders = 3; // being an index into the Team.Commands by Command.Name
  int32 points = 4;
  Token token = 5;
}

message Token {
  string id = 1;
  google.protobuf.Timestamp expires = 2;
}

message Scenario {
  google.protobuf.Timestamp startTime = 1;
  map <string, Team> teams = 2;
}

message Game {
  Scenario scenario = 1;
  int32 turnNumber = 2;
  int32 tableX = 3;
  int32 tableY = 4;
  google.protobuf.Timestamp gameTime = 5;
  string adminAccess = 6;
  string name = 7;
  Phase phase = 8;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Types

enum Arm {
  SUPPORT = 0;
  INFANTRY = 1;
  CAVALRY = 2;
  ARTILLERY = 3;
  COMMAND = 4;
}

enum UnitType {
  SUPPORT_UNIT = 0;
  INFANTRY_LINE = 1;
  INFANTRY_LIGHT = 2;
  INFANTRY_GRENADIER = 3;
  INFANTRY_IRREGULAR = 4;
  INFANTRY_RIFLES = 5;
  CAVALRY_LIGHT = 6;
  CAVALRY_HUSSAR = 7;
  CAVALRY_DRAGOON = 8;
  CAVALRY_CUIRASSIER = 9;
  CAVALRY_COSSACK = 10;
  CAVALRY_HEAVY = 11;
  CAVALRY_MEDIUM = 12;
  CAVALRY_LANCER = 13;
  ARTILLERY_BN = 14;
  ARTILLERY_LIGHT = 15;
  ARTILLERY_MEDIUM = 16;
  ARTILLERY_HEAVY = 17;
  ARTILLERY_HORSE = 18;
  ARTILLERY_LIGHT_HORSE = 19;
}

enum UnitGrade {
  CIVILIAN = 0;
  MILITIA = 1;
  CONSCRIPT = 2;
  REGULAR = 3;
  VETERAN = 4;
  ELITE = 5;
  GUARD = 6;
}

enum MoraleState {
  RESTING = 0;
  GOOD = 1;
  UNFORMED = 2;
  RATTLED = 3;
  SHAKEN = 4;
  DEMORALISED = 5;
}

enum Formation {
  RESERVE = 0;
  MARCH_COLUMN = 1;
  ATTACK_COLUMN = 2;
  LINE = 3;
  ECHELON = 4;
  SUPPORTING_LINES = 5;
  DEBANDE = 6;
  FORTIFIED = 7;
}

enum Rank {
  BATTALION = 0;
  BRIGADE = 1;
  DIVISION = 2;
  CORPS = 3;
  WING = 4;
  ARMY = 5;
  NATIONAL_LEADER = 6;
  ARTILLERY_DIV = 7;
  CAVALRY_BDE = 8;
  CAVALRY_DIV = 9;
  BATTERY = 10;
  GUN_PARK = 11;
}

enum SkirmishRating {
  POOR = 0;
  ADEQUATE = 1;
  CRACK_SHOT = 2;
  EXCELLENT = 3;
}

enum CommandRating {
  USELESS = 0;
  CUMBERSOME = 1;
  FUNCTIONAL = 2;
  EFFICIENT = 3;
}

enum Order {
  RESTAGE = 0;
  MARCH = 1;
  MOVE = 2;
  DEFEND = 3;
  WITHDRAW = 4;
  ATTACK = 5;
  RALLY = 6;
}

enum Nationality {
  ANY_NATION = 0;
  FRENCH = 1;
  BRITISH = 2;
  RUSSIAN = 3;
  PRUSSIAN = 4;
  SPANISH = 6;
  OTTOMAN = 7;
  PERSIAN = 8;
  AUSTRIAN = 9;
  AMERICAN = 10;
  INDIAN = 11;
  ITALIAN = 12;
  BAVARIAN = 13;
  DUTCH = 14;
  BELGIAN = 15;
  NASSAU = 16;
  SWISS = 17;
  PAPAL_STATES = 18;
  AFRICAN = 19;
  NATIVE = 20;
  COLONIAL = 21;
  SWEDEN = 22;
}

enum Drill {
  LINEAR = 0;
  MASSED = 1;
  RAPID = 2;
}

enum BattlefieldPosition {
  REAR = 0;
  LEFT = 1;
  CENTRE = 2;
  RIGHT = 3;
}

enum Phase {
  PREGAME = 0;
  LEADERS = 1;
  MOVEMENT1 = 2;
  FIRING1 = 3;
  ASSAULT1 = 4;
  PANIC1 = 5;
  MOVEMENT2 = 6;
  FIRING2 = 7;
  ASSAULT2 = 8;
  PANIC2 = 9;
}
